voice change "OK" fix

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -32,7 +32,7 @@
     "settings.disable":"Disable",
     "settings.audio_mode":"audio mode",
     "settings.apps":"animalese enabled apps",
-    "settings.apps.mode": "app list mode: &nbsp",
+    "settings.apps.mode": "list mode <span style='opacity: .6; font-size: 10px; margin: 3px 6px;'>allow/deny toggle</span>",
     "settings.apps.active": "<span style='color: green'>active</span> when the selected apps are focused",
     "settings.apps.inactive": "<span style='color: red'>inactive</span> when the selected apps are focused",
     "settings.apps.description": "",
