--- a/assets/lang/ja.json
+++ b/assets/lang/ja.json
@@ -3,18 +3,13 @@
     "description":"タイピングするたびに、どうぶつの森の音が鳴ります！",
 
     "volume":"音量",
-
-    "config_1":"デフォルト",
-    "config_2":"声",
-    "config_3":"効果音のみ",
-    "config_4":"ランダム <span style='opacity: .6; font-size: 10px; margin: 3px 6px;'>(入力を隠す)</span>",
      
     "editor_title":"編集ソフト",
-    "editor_1":"ピッチシフト",
-    "editor_2":"抑揚",
-    "editor_3":"音程変化",
-    "voice_profiles":"保存された声",
-    "key-remapper":"キーリマッパー",
+    "voice.pitch":"ピッチシフト",
+    "voice.intonation":"抑揚",
+    "voice.variation":"音程変化",
+    "voice.profile":"保存された声",
+    "remapper":"キーリマッパー",
     "remap":"クリックしてリマップ",
 
     "f1":"ふつう",
@@ -31,6 +26,10 @@
     "settings.startup":"起動時に実行",
     "settings.disable":"無効",
     "settings.audio_mode":"オーディオモード",
+    "settings.audio_mode.1":"デフォルト",
+    "settings.audio_mode.2":"声",
+    "settings.audio_mode.3":"効果音のみ",
+    "settings.audio_mode.4":"ランダム <span style='opacity: .6; font-size: 10px; margin: 3px 6px;'>(入力を隠す)</span>",
     "settings.apps":"アニマリーズ対応アプリ",
     "settings.apps.mode":"アプリリストモード: &nbsp",
     "settings.apps.active": "選択したアプリがフォーカスされていると<span style='color: green'>有効</span>",
