--- a/assets/lang/zh_CN.json
+++ b/assets/lang/zh_CN.json
@@ -4,17 +4,12 @@
     
     "volume":"音量",
 
-    "config_1":"默认",
-    "config_2":"仅动物语",
-    "config_3":"仅音效",
-    "config_4":"随机 <span style='opacity: .6; font-size: 10px; margin: 3px 6px;'>(隐藏输入)</span>",
-
     "editor_title":"编辑器",
-    "editor_1":"音调变化",
-    "editor_2":"语调",
-    "editor_3":"音高变化",
-    "voice_profiles":"已保存的语音",
-    "key-remapper":"按键重映射",
+    "voice.pitch":"音调变化",
+    "voice.intonation":"语调",
+    "voice.variation":"音高变化",
+    "voice.profile":"已保存的语音",
+    "remapper":"按键重映射",
     "remap":"点击以重映射",
 
     "f1":"Sweet",
@@ -31,6 +26,10 @@
     "settings.startup":"启动时运行",
     "settings.disable":"禁用",
     "settings.audio_mode":"音频模式",
+    "settings.audio_mode.1":"默认",
+    "settings.audio_mode.2":"仅动物语",
+    "settings.audio_mode.3":"仅音效",
+    "settings.audio_mode.4":"随机 <span style='opacity: .6; font-size: 10px; margin: 3px 6px;'>(隐藏输入)</span>",
     "settings.apps":"支持动物语的应用",
     "settings.apps.mode":"应用列表模式: &nbsp",
     "settings.apps.active": "所选应用聚焦时<span style='color: green'>启用</span>",
