--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -4,17 +4,12 @@
 
     "volume":"Volumen",
 
-    "config_1":"predet.",
-    "config_2":"solo animalese",
-    "config_3":"solo fx",
-    "config_4":"aleatorio <span style='opacity: .6; font-size: 10px; margin: 3px 6px;'>(ocultar escritura)</span>",
-
     "editor_title":"Editor",
-    "editor_1":"cambio de tono",
-    "editor_2":"entonación",
-    "editor_3":"variación",
-    "voice_profiles":"voces guardadas",
-    "key-remapper":"reasignador de teclas",
+    "voice.pitch":"cambio de tono",
+    "voice.intonation":"entonación",
+    "voice.variation":"variación",
+    "voice.profile":"voces guardadas",
+    "remapper":"reasignador de teclas",
     "remap":"haz clic para reasignar",
 
     "f1":"Normal",
@@ -31,6 +26,10 @@
     "settings.startup":"ejecutar al inicio",
     "settings.disable":"Desactivar",
     "settings.audio_mode":"modo de audio",
+    "settings.audio_mode.1":"predet.",
+    "settings.audio_mode.2":"solo animalese",
+    "settings.audio_mode.3":"solo fx",
+    "settings.audio_mode.4":"aleatorio <span style='opacity: .6; font-size: 10px; margin: 3px 6px;'>(ocultar escritura)</span>",
     "settings.apps":"apps con animalese",
     "settings.apps.mode":"modo de lista: &nbsp",
     "settings.apps.active": "<span style='color: green'>activo</span> cuando las apps seleccionadas tienen foco",
